# rhine

./: .gitignore  Cargo.toml
schema_derive/: Cargo.toml
schema_derive/src/: attributes.rs  generator.rs  lib.rs  path_solver.rs  tools.rs  type_helpers.rs
src/: config.rs  lib.rs
src/chat/: chat_base.rs  chat_multi.rs  chat_single.rs  chat_tool.rs  message.rs  mod.rs
src/prompt/: assembler.rs  loader.rs  mod.rs  model.rs
src/schema/: json_schema.rs  mod.rs  tool_schema.rs
src/tests/: chat.rs  message.rs  mod.rs  prompt.rs
src/tool_use/: mod.rs
src/utils/common/: load_toml.rs  mod.rs
