[package]
name = "rhine"
version = "0.1.8"
edition = "2024"
description = "code core of Rhine Lab"
license = "GPL-3.0-or-later"

[dependencies]
rhine-schema-derive = { version = "0.1.0" } # 自定义派生宏

# 核心基础库
dashmap = "7.0.0-rc2"               # 并发哈希表
once_cell = { version = "1.21.3" }  # 单次初始化容器
thiserror = { version = "2.0.16" }  # 错误定义宏
error-stack = { version = "0.5.0" } # 错误上下文追踪

# 异步编程
futures = { version = "0.3.31" }                    # Future 抽象基础
tokio = { version = "1.47.1", features = ["full"] } # 异步运行时
tokio-stream = "0.1.17"                             # 流处理扩展

# 网络通信
reqwest = { version = "0.12.23", features = ["json", "stream"] }
bytes = "1.10.1"

# 数据序列化
serde = { version = "1.0.219", features = ["derive"] } # 通用序列化框架
serde_json = { version = "1.0.143" }                   # JSON 序列化实现
toml = "0.9.5"                                         # TOML 格式支持

# 观测诊断
tracing = { version = "0.1.41", features = ["log"] } # 结构化日志追踪
clia-tracing-config = { version = "0.2.7" }          # 日志配置工具
#tklog = { version = "0.2.9" }       # 高性能日志转发（预留）

# 文本处理
indoc = "2.0.6"  # 内嵌文档格式化
regex = "1.11.2" # 正则表达式引擎


[profile.release]
opt-level = 3
